[package]
name = "nanorss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
serde = "1"
log = "0.4"
env_logger = "0.9"
dirs = "5"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
axum-macros = "0.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["compression-deflate", "cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
time = "0.3.2"
url = "2.2.2"
sled = "0.34"
bcrypt = "0.15"
tantivy = "0.20"
bincode = "1"