[package]
name = "nanorss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "1.1"
itertools = "0.11"
dotenvy = "0.15"
anyhow = "1"
thiserror = "1"
serde = "1"
log = "0.4"
env_logger = "0.9"
dirs = "5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.6"
axum-macros = "0.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["compression-deflate", "cors", "fs"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
time = { version = "0.3.2", features = ["serde", "local-offset"] }
url = { version = "2.2.2", features = ["serde"] }
sled = "0.34"
bincode = "1"
bcrypt = "0.15"
feed-rs = "1.3"
base64 = "0.21"
tempfile = "3.7"
